set(PROJECT ${STORAGE_LIB})
project(${PROJECT})

find_package(Qt5 REQUIRED COMPONENTS Core Sql)

set(QT_STORAGE_IMPL_SOURCE_FILES
        src/DBService.cpp
        src/QtSprintDistributionReader.cpp
        src/QtSprintStorageReader.cpp
        src/QtSprintStorageWriter.cpp
        src/QtYearRangeReader.cpp
        src/QtTaskStorageReader.cpp
        src/QtTaskStorageWriter.cpp
        src/Database.cpp
)

# Tell CMake to run moc when necessary:
set(CMAKE_AUTOMOC ON)
# As moc files are generated in the build dir, tell CMake
# to always look for includes there:
set(CMAKE_INCLUDE_CURRENT_DIR ON)


# this is required as headers and sources are in different directories
set(HEADER_FILES_FOR_AUTOMOC_TO_WORK
        include/qt_storage_impl/DBService.h
        include/qt_storage_impl/QtSprintDistributionReader.h
        include/qt_storage_impl/QtSprintStorageReader.h
        include/qt_storage_impl/QtSprintStorageWriter.h
        include/qt_storage_impl/QtYearRangeReader.h
        include/qt_storage_impl/QtTaskStorageReader.h
        include/qt_storage_impl/QtTaskStorageWriter.h
        include/qt_storage_impl/QtStorageImplementersFactory.h
        include/qt_storage_impl/Database.h
)

add_library(${PROJECT} SHARED ${QT_STORAGE_IMPL_SOURCE_FILES} ${HEADER_FILES_FOR_AUTOMOC_TO_WORK})

target_include_directories(${PROJECT} PUBLIC include PUBLIC src)
target_compile_features(${PROJECT} PRIVATE cxx_std_17)
target_link_libraries(${PROJECT}
    PUBLIC Qt5::Core
    PUBLIC Qt5::Sql
    PUBLIC ${CORE_LIB})

# Workaround to silence warning for file generated by Qt moc
if (WIN32)
else()	
	list(APPEND DEBUG_COMPILE_OPTIONS "-Wno-redundant-parens")
	list(APPEND RELEASE_COMPILE_OPTIONS "-Wno-redundant-parens")
endif()

if (WIN32)
    install(TARGETS ${PROJECT} RUNTIME DESTINATION ${EXECUTABLE_INSTALL_PATH_SUFFIX})
else()
    install(TARGETS ${PROJECT} LIBRARY DESTINATION ${LIBRARY_INSTALL_PATH_SUFFIX})
endif()
